# mr-reviewer

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  settings.dev.yml  settings.py
.github/workflows/: checks.yml
.memory/: src.md
application/: __init__.py  comment_deduplication.py  dto.py  ports.py  publish_review.py  review_flow.py  review_jobs.py  review_preview.py  review_progress.py  review_translation.py
domain/: __init__.py  models.py  workspace.py
domain/review/: __init__.py  agent_json.py  benchmark.py  comment_dedup.py  consolidate.py  context.py  diff.py  gate.py  indexing.py  planning.py  preview.py  standards.py  validate.py
infrastructure/: __init__.py  composition.py
infrastructure/agents/: __init__.py  openai_runner.py
infrastructure/api/: jobs.py  output.py
infrastructure/cli/: __init__.py  main.py  output.py  preview.py
infrastructure/endpoints/: __init__.py  get_metrics.py  health_check.py  router.py
infrastructure/gitlab/: __init__.py  client.py  compact.py
infrastructure/metrics/: __init__.py  decorators.py  main.py
resources/: __init__.py
runtime/: __init__.py  async_ops.py
tests/: agent_json_tests.py  agent_runtime_tests.py  api_tests.py  architecture_tests.py  benchmark_tests.py  cli_preview_tests.py  cli_tests.py  comment_deduplication_tests.py  config_tests.py  conftest.py  indexing_tests.py  orchestrator_tests.py  preview_state_tests.py  publish_review_tests.py  resume_tests.py  review_preview_tests.py  review_translation_tests.py
(+22 files in other folders)
